--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/download.jpg">
     <title>React App</title>
   </head>
   <body>
